2005-08-19  Sarfraaz Ahmed <asarfraaz@novell.com>

	* mail/mail-stub-exchange.c : Fix the name collision for global
	variable name. The same name was being used by GConf and us.
	Fixes #313076

2005-08-17  Not Zed  <NotZed@Ximian.com>

	** See bug #312668.

	* storage/exchange-offline-handler.[ch]: removed, not used anyway.
	Instead some rubbish listning to gconf keys is used, groan.

2005-08-17  Praveen Kumar  <kpraveen@novell.com>

	* addressbook/e-book-backend-exchange.c
	(proppatch_categories): Added a check to see if the categories list is 
	null before adding a property for categories. This fixes the silent 
	failure of copying contacts without categories.

2005-08-17  Praveen Kumar  <kpraveen@novell.com>

	* camel/camel-exchange-provider.c: Removed the mask to hide the
	host name. Fixes the bug 272882.
	
2005-08-17  Arunprakash  <arunp@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (find_attendee_prop)
	(check_owner_partstatus_for_declined) : Newly added to check
	the partstatus of the calendar item owner.
	(remove_object) : Rearranged the code to enable the deletion of
	non-recurring items also.
	(receive_objects) : Included checks to remove the calendar item
	if the request is declined later. Also not to create the item if
	the request is declined.
	* calendar/e-cal-backend-exchange.c 
	(e_cal_backend_exchange_get_owner_email) : Added newly to get the
	email address of the calendar's owner.
	Fixes #310478, #310445.
	
2005-08-17  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c :
	* addressbook/e-book-backend-gal.c : Fixed some typos for build break.

2005-08-17  Sushma Rai <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (build_cache)(update_cache):
	Freezing the cache update, and writing to the disk at the end.
	Fixes the problem of frequent disk access, and high CPU utilization for 
	huge caches.

	* addressbook/e-book-backend-gal.c (generate_cache_handler): Similar.
